2006-05-23  David Moore  <dcm@acm.org>

	* iptc-data.c: Changed fopen() to use "rb" instead of "r" for windows
	compatability.  Noticed by Ralph Heidelberg.

2006-04-12  David Moore  <dcm@acm.org>

	* libiptcdata.spec.in: Fixed spec file to remove errors under Fedora
	Core 5.

2005-10-04  David Moore  <dcm@acm.org>

	* iptc-tag.c: Changed "Category" dataset from repeatable to
	not-repeatable (Patch from Grigory Entin).

2005-09-29  David Moore  <dcm@acm.org>

	* NEWS, configure.in: updated for version 0.2.1.
	* docs/reference: added new section for the command-line utility
	* docs/reference: updated the synopsis for the command-line utility
	and added a description of its return values.
	* iptc/main.c: added the special dataset number "all" which means
	all datasets of the given tag should be operated on.
	* iptc/main.c: changed the return value of the program to be
	success whenever at least one command succeeds, and failure if
	no command succeeds.

2005-09-17  David Moore  <dcm@acm.org>

	* iptc/main.c: modified command syntax to allow specification of
	dataset number (for duplicates) along with the tag name.

2005-09-16  David Moore  <dcm@acm.org>

	* iptc/main.c: print dataset numbers of duplicate tags

2005-09-15  David Moore  <dcm@acm.org>

	* docs/reference: Documentation updates

2005-09-14  David Moore  <dcm@acm.org>

	* configure.in, iptc/main.c: Mac OS X compile fixes for libiconv

2005-09-10  David Moore  <dcm@acm.org>

	* iptc-data.[ch]: added new functions iptc_data_set_version(),
	iptc_data_add_dataset_with_value(), and
	iptc_data_add_dataset_with_contents().
	* iptc/main.c: removed -s option, instead sorting the datasets
	by default unless the --no-sort option is specified
	* iptc/main.c: call iptc_data_set_version() before saving

2005-09-07  David Moore  <dcm@acm.org>

	* iptc-data.h: compile fix
	* NEWS, configure.in: updated for release 0.2.0
	* docs/reference: documentation updates

2005-09-06  David Moore  <dcm@acm.org>
